benchmarks/inference-server/vllm/envoy-config/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          stream_idle_timeout: 3000s
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                  headers:
                  - name: "x-route-to"
                    exact_match: "deployment-1"
                route:
                  cluster: service1
                  timeout: 1000s  # Increase route timeout
              - match:
                  prefix: "/"
                  headers:
                  - name: "x-route-to"
                    exact_match: "deployment-2"
                route:
                  cluster: service2
                  timeout: 1000s  # Increase route timeout
          http_filters:
          - name: envoy.filters.http.wasm
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
              config:
                name: my_wasm_filter
                root_id: some_id
                vm_config:
                  vm_id: my_vm_id
                  runtime: "envoy.wasm.runtime.v8"
                  code:
                    local:
                      filename: "/etc/envoy/wasm_filter.wasm"
                  configuration:
                    "@type": type.googleapis.com/google.protobuf.StringValue
                    value: "{}"
          - name: envoy.filters.http.router
  clusters:
  - name: service1
    connect_timeout: 1000s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: service1
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 34.143.183.39
                port_value: 80
    circuit_breakers:
      thresholds:
      - priority: DEFAULT
        max_connections: 100000
        max_pending_requests: 100000
        max_requests: 100000
  - name: service2
    connect_timeout: 1000s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: service2
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 35.240.213.14
                port_value: 80
    circuit_breakers:
      thresholds:
      - priority: DEFAULT
        max_connections: 100000
        max_pending_requests: 100000
        max_requests: 100000
